# WireSentinel-Controller

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
agents/: Cargo.toml
agents/src/: lib.rs
api/: Cargo.toml
api/src/: error.rs  lib.rs  main.rs  middleware.rs  routes.rs
api/tests/: ai_security.rs  anonymity.rs  cloud_reporter.rs  cnapp.rs  federation.rs  integration.rs  kernel.rs  mixnet.rs  split_templates.rs  sse.rs  tcp_termination.rs  xdr.rs  ztna.rs
controller/: Cargo.toml
controller/migrations/: 009_xdr.sql  010_cnapp.sql
controller/src/: ai_security.rs  anonymity.rs  audit.rs  auth.rs  cloud_controllers.rs  cloud_reporter.rs  cnapp.rs  devices.rs  enrollment.rs  federation.rs  kernel.rs  lib.rs  metrics.rs  mixnet.rs  policy.rs  split_templates.rs  sse.rs  tcp_termination.rs  xdr.rs  ztna.rs
controller/tests/: unit.rs
database/: Cargo.toml
database/migrations/: 001_init.sql  002_mixnet.sql  003_cloud_federation.sql  004_kernel.sql  005_anonymity.sql  006_cloud_reporter.sql  007_ztna.sql  008_sse.sql  011_ai_security.sql  012_tcp_termination.sql  013_split_tunnel_templates.sql
database/src/: lib.rs  models.rs
docs/: controller-overview.md  phase-9.md
scripts/: build.ps1  run-tests.ps1
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  api.ts
web-ui/src/components/: Layout.tsx
web-ui/src/pages/: AiCopilot.tsx  AiDetections.tsx  AiIntelligence.tsx  AiInvestigations.tsx  AiKnowledgeGraph.tsx  AiPlaybooks.tsx  AiPolicies.tsx  AiReports.tsx  AiRisk.tsx  AiThreats.tsx  AnonymityDashboard.tsx  AnonymousRoutes.tsx  Audit.tsx  CnappAttackPaths.tsx  CnappCompliance.tsx  CnappContainers.tsx  CnappIac.tsx  CnappKubernetes.tsx  CnappPosture.tsx  CnappSbom.tsx  CnappSecrets.tsx  CnappSupplyChain.tsx  CnappVulnerabilities.tsx  CnappWorkloads.tsx  CoverTraffic.tsx  Dashboard.tsx  Devices.tsx  EntropyView.tsx  FederationView.tsx  Health.tsx  KernelFleet.tsx  KernelHealth.tsx  KernelTelemetry.tsx  Login.tsx  Mixnet.tsx  Policies.tsx  PrivacyAnalytics.tsx  SplitTunnelTemplates.tsx  SseCasb.tsx  SseDlp.tsx  (+18 more)
