[package]
name = "controller-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "controller_api"
path = "src/lib.rs"

[[bin]]
name = "controller-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
controller.workspace = true
database.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["cookies"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
